--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
+
+@layer base {
+  h1 {
+    @apply text-2xl font-semibold;
+  }
+  h2 {
+    @apply text-xl font-semibold;
+  }
+  h3 {
+    @apply text-lg;
+  }
+}
+
 @tailwind components;
 @tailwind utilities;
