--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import "react-calendar-heatmap/dist/styles.css";
 @tailwind base;
 
 @layer base {
@@ -14,3 +15,19 @@
 
 @tailwind components;
 @tailwind utilities;
+
+.react-calendar-heatmap-weekday-label {
+  @apply px-2;
+}
+
+.color-empty {
+  fill: #ebedf0;
+}
+
+.color-scale-1 {
+  fill: #9be9a8;
+}
+
+.color-scale-2 {
+  fill: #40c463;
+}
